--- a/backend(fire-free)/API/package.json
+++ b/backend(fire-free)/API/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "mongodb": "^3.5.3",
     "node-localstorage": "^2.1.5",
     "socket.io": "^2.3.0"
