--- a/frontend(fire-free)/package.json
+++ b/frontend(fire-free)/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "core-js": "^2.5.4",
+    "ngx-cookie-service": "^3.0.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
