added update .env example

--- a/backend(fire-free)/.env-example
+++ b/backend(fire-free)/.env-example
@@ -1,18 +1,20 @@
 # edit this .env-example to .env and edit the variables value as your choices
 
 #mywebsite
-SERVER_IP=""
+SERVER_IP=''
 
-# FIRE_FREE & HOMIE API URL and collections
-FIRE_FREE_API_URL=""
+# FIRE_FREE API URL and collections
+FIRE_FREE_API_URL="/RklSRS1GUkVF"
 
 # Database URLs
 DATABASE_URL_ONLINE=""
-DATABASE_URL_OFFLINE=""
+DATABASE_URL_OFFLINE="mongodb://127.0.0.1:27017/"
 
 # Database Name
-FIRE_FREE_DB=""
+DATABASE_NAME="Fire_Free"
 
 # collections name
-CUSTOMERS_COLLECTION=""
-REGISTRATION_COLLECTION=""
+ADMINS_COLLECTION="admins"
+CUSTOMERS_COLLECTION="customers"
+NOTIFICATION_COLLECTION="notifications"
+HARDWARE_DATA_COLLECTION="hardwareData"
